Name:                SemAppWhile
Version:             0.1.2
Description:         An implementation of the Semantics from the book Semantics with Applications
License:             GPL
License-file:        LICENSE
Package-url:	     git@github.com:jfcmacro/SemAppWhile.git
Category:	     Undefined
Synopsis:	     This is an example to implement diferents semantics by using UUAGC
Author:              Juan Francisco Cardona Mc'Cormick
Maintainer:          fcardona@eafit.edu.co
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable SemAppWhile
  Hs-source-dirs:    src-haskell
  Main-is:           Main.hs
  Build-Depends:     base >= 4.1 && < 5, 
                     uu-parsinglib >= 2.7.4, containers >= 0.5.0.0
  other-modules:     AbsData, SemBasicFunctions
  x-agmodule:        file: "src-haskell/AbsData.ag" options : data, pretty, lckeywords, module "AbsData"
  x-agmodule:        file: "src-haskell/SemBasicFunctions.ag" options : catas, semfuns, lckeywords, signatures, wrappers, module "SemBasicFunctions"

